--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -49,6 +49,8 @@
   settlementAgreementSignedByClaimantDeadlinePassedDashboard,
   settlementAgreementSignedByBothClaimantDashboard %}
 
+{% from "./claimStatus/paidInFullClaimant.njk" import paidInFullClaimantDashboard %}
+
 {% from "./claimStatus/offerSettlement.njk" import offerSettlementReachedDashboard %}
 
 {% from "./claimStatus/admissionByCCJClaimant.njk" import admissionByCCJClaimantDashboard %}
@@ -103,6 +105,8 @@
   {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED
     or status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
     {{ offerSettlementReachedDashboard() }}
+  {% elif status === ClaimStatus.PAID_IN_FULL %}
+    {{ paidInFullClaimantDashboard(claim) }}
   {% endif %}
 {% endmacro %}
 
