--- a/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJClaimant.njk
@@ -11,6 +11,6 @@
       { defendantName: claim.claimData.defendant.name }) }}</p>
   <p>{{ internalLink('View the repayment plan', CCJPaths.repaymentPlanSummaryPage.evaluateUri({ externalId: claim.externalId })) }}</p>
   <p> {{ t('When you’ve been paid in full, you need to let us know.') }} </p>
-  <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've been paid</a>
+  <a href="{{ DashboardPaths.datePaidPage.evaluateUri({ externalId: claim.externalId }) }}" class="button button-secondary">Tell us you've been paid</a>
 {% endmacro %}
 ccjGuard.ts
