--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
@@ -44,7 +44,7 @@
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
     {% set repaymentDate = repaymentPlan.firstPaymentDate | date %}
-    {% set paymentSchedule = t(repaymentPlan.paymentSchedule | renderPaymentSchedule) %}
+    {% set paymentSchedule = t(repaymentPlan.paymentSchedule | renderPaymentSchedule | lower) %}
     {% set installmentAmount = repaymentPlan.instalmentAmount | numeral %}
 
     <p> {{ t('You’ve offered to pay {{ claimantName }} {{ amount }} {{ paymentSchedule }} starting {{ repaymentDate }}.',
