--- a/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
+++ b/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
@@ -17,13 +17,15 @@
     {% elseif paymentIntention.paymentOption === PaymentType.BY_SPECIFIED_DATE.value %}
       {{ row('The agreement', t('{{ defendantFullName }} will pay {{ totalAmount }}, no later than {{ paymentDate }}',
         { defendantFullName: claim.response.defendant.name,
-          paymentDate: paymentIntention.paymentDate | date,
-          totalAmount: totalAmount | numeral}
+          totalAmount: totalAmount | numeral,
+          paymentDate: paymentIntention.paymentDate | date
+          }
       )) }}
       {{ row('Completion date', paymentIntention.paymentDate | date) }}
     {% elseif paymentIntention.paymentOption === PaymentType.INSTALMENTS.value %}
-      {{ row('The agreement', t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
+      {{ row('The agreement', t('{{ defendantFullName }} will repay {{ totalAmount }} in instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
         { defendantFullName: claim.response.defendant.name,
+          totalAmount: totalAmount | numeral,
           instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
           paymentSchedule: paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
           firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
