--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -57,10 +57,10 @@
 
 {% macro paymentInformationFragment(paymentDeclaration) %}
   <h3 class="heading-small">{{ t('When they paid this amount') }}</h3>
-  <p>{{ claim.response.paymentDeclaration.paidDate | date }}</p>
+  <p>{{ paymentDeclaration.paidDate | date }}</p>
 
   <h3 class="heading-small">{{ t('How they say they paid') }}</h3>
-  <p>{{ claim.response.paymentDeclaration.explanation }}</p>
+  <p>{{ paymentDeclaration.explanation }}</p>
 {% endmacro %}
 
 {% block content %}
