Prevented ADMISSION_SETTLEMENT_AGREEMENT_REACHED showing extra paid in full link

--- a/src/main/features/dashboard/views/macro/claimStatus/paidInFullClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/paidInFullClaimant.njk
@@ -20,7 +20,7 @@
 {% macro paidInFullCCJCancelledClaimantClaimDetails(claim) %}
   {{  paidInFullClaimantClaimSettledDetails(claim) }}
   <p>
-    {{ t('The defendant\'s County Court Judgment has been cancelled.') }}
+    {{ t('The defendant’s County Court Judgment has been cancelled.') }}
   </p>
 {% endmacro %}
 
