--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
@@ -29,7 +29,7 @@
           { amount: amountToPay,
             paymentDate: claim.settlement.getLastOffer().paymentIntention.paymentDate | date })
         }}</p>
-      {% elif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+    {% elif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
       <p>{{ t('The agreement says you’ll repay {{ instalmentAmount }} {{ paymentSchedule }} starting {{ firstPaymentDate }}.',
           {
             instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
@@ -48,24 +48,16 @@
 {% macro settlementAgreementSignedByClaimantNewPaymentPlanDefendantClaimDetails(claim) %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('{{ claimantName }} rejected your repayment plan.', { claimantName: claim.claimData.claimant.name }) }}</h2>
-    {% if courtDetermined %}
+    {% if claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+      <p>{{ t('{{ claimantName }} accepted your offer to pay {{ partAdmitAmount }} but rejected your repayment plan.',
+          { claimantName: claim.claimData.claimant.name, partAdmitAmount: claim.response.amount }) }}</p>
+    {% endif %}
+    {% if claim.claimantResponse.courtDetermination.decisionType !== DecisionType.CLAIMANT %}
       <p>{{ t('They accepted a new repayment plan determined by the court, based on the financial details you provided.') }}</p>
-      {% elif acceptedByCourt %}
+    {% else %}
       <p>{{ t('They suggested a new repayment plan. The court believes you can afford the claimant’s plan, based on the financial details you provided.') }}</p>
     {% endif %}
 
-    <p>{{ t('They asked you to sign a settlement agreement to formalise the plan.') }}</p>
-    <p>{{ t('If you sign the agreement, they can’t request a County Court Judgment against you unless you break the terms.') }}</p>
-    <p>{{ t('If you don’t sign or respond by {{ deadline }} they can request a County Court Judgment against you.', deadline = claim.claimantRespondedAt | addDays(7) | date) }}</p>
-    <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
-    <p>{{ downloadResponseLink(claim) }}</p>
-  </div>
-{% endmacro %}
-
-{% macro settlementAgreementCourtOfferAcceptedSignedByClaimantDefendantClaimDetails(claim) %}
-  <div class="status-block">
-    <h2 class="heading-small">{{ t('{{ claimantName }} rejected your repayment plan.', { claimantName: claim.claimData.claimant.name }) }}</h2>
-    <p>{{ t('They accepted a new repayment plan determined by the court, based on the financial details you provided.') }}</p>
     <p>{{ t('They asked you to sign a settlement agreement to formalise the plan.') }}</p>
     <p>{{ t('If you sign the agreement, they can’t request a County Court Judgment against you unless you break the terms.') }}</p>
     <p>{{ t('If you don’t sign or respond by {{ deadline }} they can request a County Court Judgment against you.', deadline = claim.claimantRespondedAt | addDays(7) | date) }}</p>
