--- a/src/main/views/macro/paymentPlanTable.njk
+++ b/src/main/views/macro/paymentPlanTable.njk
@@ -4,7 +4,7 @@
       <span class="visually-hidden">{{ t( 'Payment plan' ) }}</span>
     </legend>
     {{ row('Regular payments of', instalmentAmount | numeral) }}
-    {{ row('Frequency of payments', paymentSchedule | renderPaymentSchedule) }}
+    {{ row('Frequency of payments', paymentSchedule | renderPaymentSchedule(adverbial=true)) }}
     {{ row('Make the first payment on', firstPaymentDate | date) }}
     {{ row('Last payment on', completionDate | date) }}
     {{ row('Length of repayment plan', paymentLength) }}
