Update content for court calculated plan (#1041)

--- a/src/main/features/claimant-response/views/court-offer.njk
+++ b/src/main/features/claimant-response/views/court-offer.njk
@@ -15,7 +15,7 @@
 
       {{
       repaymentPlanBlock(
-        heading = '',
+        heading = 'The court’s proposed repayment plan',
         repaymentPlan = courtOrderPaymentPlan
       )
       }}
