--- a/src/main/features/dashboard/views/macro/claimStatus/offerAccepted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerAccepted.njk
@@ -32,7 +32,7 @@
   <div class="status-block">
     {% if claim.settlement.isThroughAdmissions() %}
       <h2 class="heading-small">{{ t('The claimant has accepted your repayment plan') }}</h2>
-      <p>{{ t('{{ claimantName }} has accepted your plan and asked you to sign a legal agreement that formalises it. The agreement is called a \'settlement agreement\'.',
+      <p>{{ t('{{ claimantName }} has accepted your plan and asked you to sign a legal agreement that formalises it. The agreement is called a ‘settlement agreement’.',
         { claimantName: claim.claimData.claimant.name }) }}</p>
       <p>{{ t('If you sign the settlement agreement, they can’t request a CCJ against you unless you break the terms.') }}</p>
     {% else %}
