--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
@@ -8,7 +8,7 @@
 
 {% macro claimPartAdmittedAlreadyPaidForDefendantClaimDetails(claim) %}
   <div class="status-block">
-    <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
+    <h2 class="heading-small">{{ t('You’ve responded to the claim') }}</h2>
     <p>{{ t('We’ve emailed {{ claimantName }} telling them when and how you said you paid the claim.',
         { claimantName: claim.claimData.claimant.name }) }}</p>
     <p>{{ t('We’ll contact you to let you know how they respond. They can confirm you’ve paid and the claim is ' +
@@ -23,7 +23,7 @@
 
 {% macro claimPartAdmittedToOweForDefendantClaimDetails(claim) %}
   <div class="status-block">
-    <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
+    <h2 class="heading-small">{{ t('You’ve responded to the claim') }}</h2>
     <p>{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
         {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} immediately.',
           { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}
@@ -38,7 +38,6 @@
           { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name,
             installmentAmount: installmentAmount, paymentSchedule: paymentSchedule, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
       {% endif %}</p>
-    <p>{{ t('We’ve also sent them your explanation of why you don’t believe you owe the amount claimed.') }}</p>
     <p>{{ t('We’ll contact you when they respond.') }}</p>
     <p>{{ downloadResponseLink(claim) }}</p>
   </div>
