--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -51,7 +51,7 @@ ccjRequestedForDefendantClaimDetails %}
   offerSettlementReachedForDefendant,
   offerSettlementReachedForClaimant %}
 
-{% from "./claimStatus/paidInFullClaimant.njk" import paidInFullClaimantClaimSettledDetails, paidInFullCCJCancelledClaimantClaimDetails, paidInFullCCJSatisfiedClaimantClaimDetails %}
+{% from "./claimStatus/paidInFullClaimant.njk" import paidInFullClaimantClaimSettledDetails, paidInFullClaimantClaimDetails, paidInFullCCJCancelledClaimantClaimDetails, paidInFullCCJSatisfiedClaimantClaimDetails %}
 {% from "./claimStatus/admissionByCCJClaimant.njk" import admissionByCCJClaimantClaimDetails %}
 {% from "./claimStatus/admissionByCCJDefendant.njk" import admissionByCCJDefendantClaimDetails %}
 {% from "./claimStatus/settlementAgreementDefendant.njk" import
@@ -61,6 +61,18 @@ ccjRequestedForDefendantClaimDetails %}
 {% macro caseHistoryForClaimantClaimDetails(claim, csrf) %}
   {% for state in claim.stateHistory %}
     <div class="status-block">
+      {% if not state.status === ClaimStatus.RESPONSE_SUBMITTED %}
+        {% if state.status === ClaimStatus.PAID_IN_FULL_ELIGIBLE %}
+          {{ paidInFullClaimantClaimDetails(claim) }}
+        {% elif state.status === ClaimStatus.PAID_IN_FULL %}
+           {{ paidInFullClaimantClaimSettledDetails(claim) }}
+        {% elif state.status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED %}
+           {{ paidInFullCCJCancelledClaimantClaimDetails(claim) }}
+        {% elif state.status === ClaimStatus.PAID_IN_FULL_CCJ_SATISFIED %}
+           {{ paidInFullCCJSatisfiedClaimantClaimDetails(claim) }}
+        {% endif %}
+      {% endif %}
+
       {% if state.status === ClaimStatus.NO_RESPONSE %}
         {{ noResponseForClaimantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.MORE_TIME_REQUESTED %}
@@ -108,16 +120,6 @@ ccjRequestedForDefendantClaimDetails %}
       {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED
               or state.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
         {{ offerSettlementReachedForClaimant(claim) }}
-      {% elif state.status === ClaimStatus.PAID_IN_FULL %}
-        {{ paidInFullClaimantClaimSettledDetails(claim) }}
-      {% elif state.status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED %}
-        {{ paidInFullCCJCancelledClaimantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.PAID_IN_FULL_CCJ_SATISFIED %}
-        {{ paidInFullCCJSatisfiedClaimantClaimDetails(claim) }}
-      {% else %}
-        <p>
-          {{ caseStatusForClaimant(state.status, claim) }}
-        </p>
       {% endif %}
     </div>
   {% endfor %}
